--- a/TeamRiiiiice/sentimental_ml/ml0902_2015_cafe.ipynb
+++ b/TeamRiiiiice/sentimental_ml/ml0902_2015_cafe.ipynb
@@ -3,7 +3,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 머신러닝 비교 \r\n",
+    "# 머신러닝 LogisticRegression 이용한 감성분석 (긍정 / 부정) 01\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 0901  - 0902 머신러닝 \r\n",
     "- 학습: 현대쇼핑 / 쿠팡 쌀 리뷰 ( 긍정 +1 / 부정 0)\r\n",
     "\r\n",
     "- 예측: sns데이터 ( 2015 카페 )"
@@ -59,12 +66,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                                                   0  1\n",
-       "0   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...  0\n",
-       "1   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...  0\n",
-       "2   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...  1"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -107,6 +108,12 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                                   0  1\n",
+       "0   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...  0\n",
+       "1   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...  0\n",
+       "2   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...  1"
       ]
      },
      "metadata": {},
@@ -133,12 +140,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "    제품                                                 내용  긍부정  원별점\n",
-       "0  메뚜기  2021년 2월 15일 최근 도정입니다.\\n2월 26일 배송 받았고 처음 밥해 먹었...    0    1\n",
-       "1  메뚜기  쌀 반정도 부었는데\\n돌맹이 나왔어요 ㅡㅡ::\\n손톱으로 누르니 돌이네요..\\n왜 ...    0    1\n",
-       "2  메뚜기  아 정말 사본쌀중에 제일 별로였어요\\n저는 31280원 주고 구매했는데 싸지도않도 ...    0    1"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -189,6 +190,12 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "    제품                                                 내용  긍부정  원별점\n",
+       "0  메뚜기  2021년 2월 15일 최근 도정입니다.\\n2월 26일 배송 받았고 처음 밥해 먹었...    0    1\n",
+       "1  메뚜기  쌀 반정도 부었는데\\n돌맹이 나왔어요 ㅡㅡ::\\n손톱으로 누르니 돌이네요..\\n왜 ...    0    1\n",
+       "2  메뚜기  아 정말 사본쌀중에 제일 별로였어요\\n저는 31280원 주고 구매했는데 싸지도않도 ...    0    1"
       ]
      },
      "metadata": {},
@@ -437,22 +444,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "        index                                                  0\n",
-       "0           0   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
-       "1           1   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
-       "2           2   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
-       "3           3   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
-       "4           4   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
-       "...       ...                                                ...\n",
-       "363612   6780                    매번 재구매하고 있어요\\n찰지게 밥도 잘 되고 맛있습니다\n",
-       "363613   6781  곰곰에서 쌀도 나오다니 ㅎㅎㅎ 10킬로짜리 살 일이 없었는데 최근에 집에 있는 시간...\n",
-       "363614   6782              20kg 없어서 아쉬워요!!!\\n쌀 좋아요!! 곰곰쌀만 먹고있어요!\n",
-       "363615   6783  요즘 쌀 20 키로 에 비싼 것은 육만 원 가량 하고 저렴한 것은 사만원대 정도하는...\n",
-       "363616   6784  매일 그날 도정한 쌀 사다가 먹었는데..이번에 구매하려니 품절이라 곰곰 쌀을 구매해...\n",
-       "\n",
-       "[363617 rows x 2 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -536,6 +527,22 @@
        "</table>\n",
        "<p>363617 rows × 2 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "        index                                                  0\n",
+       "0           0   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
+       "1           1   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
+       "2           2   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
+       "3           3   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
+       "4           4   +@음침한 분위기+@기괴한 크리쳐들-@눈만 아픈 그래픽-@왜 넣었는지 모를 레터박...\n",
+       "...       ...                                                ...\n",
+       "363612   6780                    매번 재구매하고 있어요\\n찰지게 밥도 잘 되고 맛있습니다\n",
+       "363613   6781  곰곰에서 쌀도 나오다니 ㅎㅎㅎ 10킬로짜리 살 일이 없었는데 최근에 집에 있는 시간...\n",
+       "363614   6782              20kg 없어서 아쉬워요!!!\\n쌀 좋아요!! 곰곰쌀만 먹고있어요!\n",
+       "363615   6783  요즘 쌀 20 키로 에 비싼 것은 육만 원 가량 하고 저렴한 것은 사만원대 정도하는...\n",
+       "363616   6784  매일 그날 도정한 쌀 사다가 먹었는데..이번에 구매하려니 품절이라 곰곰 쌀을 구매해...\n",
+       "\n",
+       "[363617 rows x 2 columns]"
       ]
      },
      "metadata": {},
@@ -557,22 +564,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "        index  0\n",
-       "0           0  0\n",
-       "1           1  0\n",
-       "2           2  1\n",
-       "3           3  1\n",
-       "4           4  1\n",
-       "...       ... ..\n",
-       "363612   6780  1\n",
-       "363613   6781  1\n",
-       "363614   6782  1\n",
-       "363615   6783  1\n",
-       "363616   6784  1\n",
-       "\n",
-       "[363617 rows x 2 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -656,6 +647,22 @@
        "</table>\n",
        "<p>363617 rows × 2 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "        index  0\n",
+       "0           0  0\n",
+       "1           1  0\n",
+       "2           2  1\n",
+       "3           3  1\n",
+       "4           4  1\n",
+       "...       ... ..\n",
+       "363612   6780  1\n",
+       "363613   6781  1\n",
+       "363614   6782  1\n",
+       "363615   6783  1\n",
+       "363616   6784  1\n",
+       "\n",
+       "[363617 rows x 2 columns]"
       ]
      },
      "metadata": {},
@@ -944,22 +951,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                                                 content\n",
-       "0                                  세종시로 올해 1월 10일 이사했습니다\n",
-       "1                                                       \n",
-       "2                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요\n",
-       "3                                                       \n",
-       "4                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다\n",
-       "...                                                  ...\n",
-       "88905  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...\n",
-       "88906                                                   \n",
-       "88907                                       큰봉지로 한봉지정도되요\n",
-       "88908                                                   \n",
-       "88909                                                   \n",
-       "\n",
-       "[88910 rows x 1 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1031,6 +1022,22 @@
        "</table>\n",
        "<p>88910 rows × 1 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                                 content\n",
+       "0                                  세종시로 올해 1월 10일 이사했습니다\n",
+       "1                                                       \n",
+       "2                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요\n",
+       "3                                                       \n",
+       "4                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다\n",
+       "...                                                  ...\n",
+       "88905  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...\n",
+       "88906                                                   \n",
+       "88907                                       큰봉지로 한봉지정도되요\n",
+       "88908                                                   \n",
+       "88909                                                   \n",
+       "\n",
+       "[88910 rows x 1 columns]"
       ]
      },
      "metadata": {},
@@ -1627,22 +1634,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                                                 content\n",
-       "0                                  세종시로 올해 1월 10일 이사했습니다\n",
-       "2                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요\n",
-       "4                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다\n",
-       "6                                 세종청사에서 출발해 15분 걸린듯 싶어요\n",
-       "8       깜깜한 밤이라 아주 약간 길을 헤맸는데 큰길옆에 소나무가 있는집 이라 다음번엔 금...\n",
-       "...                                                  ...\n",
-       "88899        아이들 밑반찬으로 짱인   멸치볶음  멸치에 남아 있는 비린내 잡기 딱 좋더라\n",
-       "88903  식용유 미림맛술 꿀 이렇게 3가지 양념만 넣고 조리 했는데 맛이 와  비린맛 잘 잡...\n",
-       "88905  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...\n",
-       "88907                                       큰봉지로 한봉지정도되요\n",
-       "88909                                                   \n",
-       "\n",
-       "[36354 rows x 1 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1714,6 +1705,22 @@
        "</table>\n",
        "<p>36354 rows × 1 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                                 content\n",
+       "0                                  세종시로 올해 1월 10일 이사했습니다\n",
+       "2                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요\n",
+       "4                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다\n",
+       "6                                 세종청사에서 출발해 15분 걸린듯 싶어요\n",
+       "8       깜깜한 밤이라 아주 약간 길을 헤맸는데 큰길옆에 소나무가 있는집 이라 다음번엔 금...\n",
+       "...                                                  ...\n",
+       "88899        아이들 밑반찬으로 짱인   멸치볶음  멸치에 남아 있는 비린내 잡기 딱 좋더라\n",
+       "88903  식용유 미림맛술 꿀 이렇게 3가지 양념만 넣고 조리 했는데 맛이 와  비린맛 잘 잡...\n",
+       "88905  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...\n",
+       "88907                                       큰봉지로 한봉지정도되요\n",
+       "88909                                                   \n",
+       "\n",
+       "[36354 rows x 1 columns]"
       ]
      },
      "metadata": {},
@@ -1734,22 +1741,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                                                 content\n",
-       "0                                  세종시로 올해 1월 10일 이사했습니다\n",
-       "1                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요\n",
-       "2                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다\n",
-       "3                                 세종청사에서 출발해 15분 걸린듯 싶어요\n",
-       "4       깜깜한 밤이라 아주 약간 길을 헤맸는데 큰길옆에 소나무가 있는집 이라 다음번엔 금...\n",
-       "...                                                  ...\n",
-       "36349        아이들 밑반찬으로 짱인   멸치볶음  멸치에 남아 있는 비린내 잡기 딱 좋더라\n",
-       "36350  식용유 미림맛술 꿀 이렇게 3가지 양념만 넣고 조리 했는데 맛이 와  비린맛 잘 잡...\n",
-       "36351  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...\n",
-       "36352                                       큰봉지로 한봉지정도되요\n",
-       "36353                                                   \n",
-       "\n",
-       "[36354 rows x 1 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1821,6 +1812,22 @@
        "</table>\n",
        "<p>36354 rows × 1 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                                 content\n",
+       "0                                  세종시로 올해 1월 10일 이사했습니다\n",
+       "1                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요\n",
+       "2                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다\n",
+       "3                                 세종청사에서 출발해 15분 걸린듯 싶어요\n",
+       "4       깜깜한 밤이라 아주 약간 길을 헤맸는데 큰길옆에 소나무가 있는집 이라 다음번엔 금...\n",
+       "...                                                  ...\n",
+       "36349        아이들 밑반찬으로 짱인   멸치볶음  멸치에 남아 있는 비린내 잡기 딱 좋더라\n",
+       "36350  식용유 미림맛술 꿀 이렇게 3가지 양념만 넣고 조리 했는데 맛이 와  비린맛 잘 잡...\n",
+       "36351  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...\n",
+       "36352                                       큰봉지로 한봉지정도되요\n",
+       "36353                                                   \n",
+       "\n",
+       "[36354 rows x 1 columns]"
       ]
      },
      "metadata": {},
@@ -2146,22 +2153,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                                               sentence score result\n",
-       "0     세종시로 올해 1월 10일 이사했습니다||-|| 어제 쌀이 똑 떨어졌는데 마침 까페...   [1]     긍정\n",
-       "1     저희 큰아버지께서 쌀도매를 하세요||-||  빨간쌀 이예요||-|| 저도 작녁부터 ...   [1]     긍정\n",
-       "2                                   제가 변비가 심해서 현미쌀100 를   [0]     부정\n",
-       "3     그동안 계속 공구후기며 공구게시판에서 보던 쌀찐빵을 구입했어요||-|| 아기간식도 ...   [1]     긍정\n",
-       "4     심심한 일요일 오후 당근쌀머핀 만들어 보았어요||-|| 당근이랑 우유는 휘리릭 갈아...   [0]     부정\n",
-       "...                                                 ...   ...    ...\n",
-       "9581  요리전용맛술 마트가면 보기는 했는데 저게 꼭 필요할까 하는 생각에 구매를 망설였는데...   [1]     긍정\n",
-       "9582                         가능한가요     믹서기 청소가 귀찮아서       [0]     부정\n",
-       "9583  담주부터 초기이유식 시작인데 아직 애가 못앉잖아요  다들 그냥 분유주듯 안아서 먹이...   [0]     부정\n",
-       "9584               어뭉들어디서 사드시나요  아이간식사먹이는 사이트추천좀해주셔요      [1]     긍정\n",
-       "9585  간혹 동물 사료용으로 쓰신다고 무료나눔하신던데   벌레가 막 나오거나 하지는 않는데...   [0]     부정\n",
-       "\n",
-       "[9586 rows x 3 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -2257,6 +2248,22 @@
        "</table>\n",
        "<p>9586 rows × 3 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                               sentence score result\n",
+       "0     세종시로 올해 1월 10일 이사했습니다||-|| 어제 쌀이 똑 떨어졌는데 마침 까페...   [1]     긍정\n",
+       "1     저희 큰아버지께서 쌀도매를 하세요||-||  빨간쌀 이예요||-|| 저도 작녁부터 ...   [1]     긍정\n",
+       "2                                   제가 변비가 심해서 현미쌀100 를   [0]     부정\n",
+       "3     그동안 계속 공구후기며 공구게시판에서 보던 쌀찐빵을 구입했어요||-|| 아기간식도 ...   [1]     긍정\n",
+       "4     심심한 일요일 오후 당근쌀머핀 만들어 보았어요||-|| 당근이랑 우유는 휘리릭 갈아...   [0]     부정\n",
+       "...                                                 ...   ...    ...\n",
+       "9581  요리전용맛술 마트가면 보기는 했는데 저게 꼭 필요할까 하는 생각에 구매를 망설였는데...   [1]     긍정\n",
+       "9582                         가능한가요     믹서기 청소가 귀찮아서       [0]     부정\n",
+       "9583  담주부터 초기이유식 시작인데 아직 애가 못앉잖아요  다들 그냥 분유주듯 안아서 먹이...   [0]     부정\n",
+       "9584               어뭉들어디서 사드시나요  아이간식사먹이는 사이트추천좀해주셔요      [1]     긍정\n",
+       "9585  간혹 동물 사료용으로 쓰신다고 무료나눔하신던데   벌레가 막 나오거나 하지는 않는데...   [0]     부정\n",
+       "\n",
+       "[9586 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -2327,22 +2334,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                                                sentence score result\n",
-       "0                                  세종시로 올해 1월 10일 이사했습니다   [1]     긍정\n",
-       "1                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요   [0]     부정\n",
-       "2                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다   [1]     긍정\n",
-       "3                                 세종청사에서 출발해 15분 걸린듯 싶어요   [1]     긍정\n",
-       "4       깜깜한 밤이라 아주 약간 길을 헤맸는데 큰길옆에 소나무가 있는집 이라 다음번엔 금...   [1]     긍정\n",
-       "...                                                  ...   ...    ...\n",
-       "36349        아이들 밑반찬으로 짱인   멸치볶음  멸치에 남아 있는 비린내 잡기 딱 좋더라   [1]     긍정\n",
-       "36350  식용유 미림맛술 꿀 이렇게 3가지 양념만 넣고 조리 했는데 맛이 와  비린맛 잘 잡...   [1]     긍정\n",
-       "36351  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...   [1]     긍정\n",
-       "36352                                       큰봉지로 한봉지정도되요   [0]     부정\n",
-       "36353                                                      [0]     부정\n",
-       "\n",
-       "[36354 rows x 3 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -2438,6 +2429,22 @@
        "</table>\n",
        "<p>36354 rows × 3 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                                sentence score result\n",
+       "0                                  세종시로 올해 1월 10일 이사했습니다   [1]     긍정\n",
+       "1                          어제 쌀이 똑 떨어졌는데 마침 까페에 쌀공구가 떴네요   [0]     부정\n",
+       "2                        내일아침 밥을 하기위해 저녁에 직접 방문드리기로 했습니다   [1]     긍정\n",
+       "3                                 세종청사에서 출발해 15분 걸린듯 싶어요   [1]     긍정\n",
+       "4       깜깜한 밤이라 아주 약간 길을 헤맸는데 큰길옆에 소나무가 있는집 이라 다음번엔 금...   [1]     긍정\n",
+       "...                                                  ...   ...    ...\n",
+       "36349        아이들 밑반찬으로 짱인   멸치볶음  멸치에 남아 있는 비린내 잡기 딱 좋더라   [1]     긍정\n",
+       "36350  식용유 미림맛술 꿀 이렇게 3가지 양념만 넣고 조리 했는데 맛이 와  비린맛 잘 잡...   [1]     긍정\n",
+       "36351  멸치도 생선이니     다음에는 캠핑장에가서 고기 구워먹을때 사용해 봐야 겠여요가능...   [1]     긍정\n",
+       "36352                                       큰봉지로 한봉지정도되요   [0]     부정\n",
+       "36353                                                      [0]     부정\n",
+       "\n",
+       "[36354 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -2453,6 +2460,15 @@
     "result_df.to_excel('result/2015_cafe_sentence_senti_ml_pluscoupang.xlsx',encoding='utf-8')"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "긍정/ 부정만이 존재하여, 직접 판단하였을때 중립인 문장또한 긍/부정으로 구분되었다.\r\n",
+    "\r\n",
+    "학습데이터에 중립데이터를 추가하여 다른 모델을 이용해 보자."
+   ],
    "metadata": {}
   }
  ],
