--- a/TeamRiiiiice/preprocess_socialdata/03sentencesplit/0906_social_kss_st_split.ipynb
+++ b/TeamRiiiiice/preprocess_socialdata/03sentencesplit/0906_social_kss_st_split.ipynb
@@ -72,9 +72,9 @@
     "    if num == 0: data =data_2015_blog\r\n",
     "    if num == 1: data =data_2015_cafe\r\n",
     "    if num == 2: data =data_2019_blog\r\n",
-    "    if num == 3: data =data_2019_blog\r\n",
+    "    if num == 3: data =data_2019_cafe\r\n",
     "    if num == 4: data =data_2020_blog\r\n",
-    "    if num == 5: data =data_2020_blog\r\n",
+    "    if num == 5: data =data_2020_cafe\r\n",
     "\r\n",
     "    #02. 각 데이터 셋 정제\r\n",
     "    data_temp = [] #원데이터 임시저장\r\n",
