--- a/TeamRiiiiice/preprocess_socialdata/01preprocessing/2015_cafe_preprocessing copy.ipynb
+++ b/TeamRiiiiice/preprocess_socialdata/01preprocessing/2015_cafe_preprocessing copy.ipynb
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import pandas as pd"
    ],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "data = pd.read_excel('preprocessing_cnts_dropna_data/preprocess_dropna_2015_cafe_ssal.xlsx')"
    ],
@@ -803,11 +803,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "source": [
     "# contents str로 처리\r\n",
     "q= \" \"\r\n",
-    "for i in range(len(data)):\r\n",
+    "for i in range(3):\r\n",
     "    try:\r\n",
     "     q += data['content'][i]\r\n",
     "    except:\r\n",
@@ -818,13 +818,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "source": [
     "from konlpy.tag import Okt\r\n",
     "okt = Okt()\r\n",
     "nouns = okt.nouns(q)\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "java.lang.ExceptionInInitializerError",
+     "evalue": "java.lang.ExceptionInInitializerError",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mjava.nio.charset.MalformedInputException\u001b[0m  Traceback (most recent call last)",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.util.KoreanDictionaryProvider$.<clinit>\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.util.KoreanDictionaryProvider$.<init>\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.util.KoreanDictionaryProvider$.readWords\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.mutable.WrappedArray.foreach\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.IndexedSeqOptimized.foreach$\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.IndexedSeqOptimized.foreach\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.util.KoreanDictionaryProvider$.$anonfun$readWords$1$adapted\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.util.KoreanDictionaryProvider$.$anonfun$readWords$1\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.AbstractIterator.foreach\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.Iterator.foreach$\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.Iterator.foreach\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.Iterator$$anon$12.hasNext\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.Iterator$$anon$10.hasNext\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.io.BufferedSource$BufferedLineIterator.hasNext\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mjava.io.BufferedReader.readLine\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mjava.io.BufferedReader.readLine\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mjava.io.BufferedReader.fill\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mjava.io.InputStreamReader.read\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36msun.nio.cs.StreamDecoder.read\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36msun.nio.cs.StreamDecoder.implRead\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mjava.nio.charset.CoderResult.throwException\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mjava.nio.charset.MalformedInputException\u001b[0m: java.nio.charset.MalformedInputException: Input length = 1",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mkr.lucypark.okt.OktInterface.tokenize\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.OpenKoreanTextProcessorJava.tokenize\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.OpenKoreanTextProcessor.tokenize\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.OpenKoreanTextProcessor$.tokenize\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.tokenizer.KoreanTokenizer$.tokenize\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.tokenizer.KoreanTokenizer$.tokenizeTopN\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.immutable.List.map\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.TraversableLike.map$\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.TraversableLike.map\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.immutable.List.foreach\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36mscala.collection.TraversableLike.$anonfun$map$1\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.tokenizer.KoreanTokenizer$.$anonfun$tokenizeTopN$1\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.tokenizer.KoreanTokenizer$.parseKoreanChunk\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.tokenizer.KoreanTokenizer$.findTopCandidates\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\_jpype.cp38-win_amd64.pyd\u001b[0m in \u001b[0;36morg.openkoreantext.processor.tokenizer.KoreanTokenizer$.findDirectMatch\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mException\u001b[0m: Java Exception",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mjava.lang.ExceptionInInitializerError\u001b[0m     Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-ec276f31143f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkonlpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtag\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mOkt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mokt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mOkt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mnouns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mokt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnouns\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\konlpy\\tag\\_okt.py\u001b[0m in \u001b[0;36mnouns\u001b[1;34m(self, phrase)\u001b[0m\n\u001b[0;32m     70\u001b[0m         \u001b[1;34m\"\"\"Noun extractor.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m         \u001b[0mtagged\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mphrase\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0ms\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtagged\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mt\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'Noun'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\konlpy\\tag\\_okt.py\u001b[0m in \u001b[0;36mpos\u001b[1;34m(self, phrase, norm, stem, join)\u001b[0m\n\u001b[0;32m     58\u001b[0m         \"\"\"\n\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 60\u001b[1;33m         tokens = self.jki.tokenize(\n\u001b[0m\u001b[0;32m     61\u001b[0m                     \u001b[0mphrase\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m                     \u001b[0mjpype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjava\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlang\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBoolean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mjava.lang.ExceptionInInitializerError\u001b[0m: java.lang.ExceptionInInitializerError"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -965,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "source": [
     "# okt() 돌리는 시간 단축을 위하여 임시 저장\r\n",
     "nouns2 =nouns"
@@ -975,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 18,
    "source": [
     "# stopwords로 제거\r\n",
     "stopwords_nouns = ['요','때','분','것','오늘','더','정도','좀','시작','제','저','거','수','이제','또','하나','그냥','곳','주문','혹시','전','개','생각','해','후',\r\n",
@@ -983,7 +1039,7 @@
     "                    '이번','다시','어제','쌀','구','엄마','키','뭐','하루','걸','아시','말','가요','때문','등','그','이상','다른','날','계속','신랑','준비','요즘',\r\n",
     "                    '신분','사진','킹','추천','판매','가지',#추가제거\r\n",
     "                    '정보','추천','유통','농사','방법','나눔','시댁','다음','달','제품','이용','어디','꼭','사서','애','알','배','도','마을','교환','먹이','나','일','얼마',\r\n",
-    "                    '손','보고','위','시골','입','통','걱정','사람','연락','먹기','기','실','만','친정','살',\r\n",
+    "                    '손','보고','위','시골','입','통','걱정','사람','연락','먹기','기','실','만','친정','살','요','분','더','때','양','것','때'\r\n",
     "                    '모두','내일','아주','댓글','미리','질문','시','진짜','완전','근처','중기','고민','거의','끼','포대'  #추가제거 \r\n",
     "]\r\n"
    ],
@@ -992,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 19,
    "source": [
     "# 데이터 정제\r\n",
     "for anoun in nouns2:\r\n",
@@ -1020,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 20,
    "source": [
     "#벌레관련 데이터 정제\r\n",
     "for anoun in nouns2:\r\n",
@@ -1045,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 11,
    "source": [
     "#유통기한관련\r\n",
     "for anoun in nouns2:\r\n",
@@ -1058,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 12,
    "source": [
     "#배송관련\r\n",
     "for anoun in nouns2:\r\n",
@@ -1138,6 +1194,49 @@
      "execution_count": 215
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "# 2) 시리즈로 빈도확인\r\n",
+    "okt_series = pd.Series(nouns2).value_counts()\r\n",
+    "okt_series"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "쌀      3517\n",
+       "가루     3102\n",
+       "이유식    2185\n",
+       "밥      1976\n",
+       "아이     1783\n",
+       "       ... \n",
+       "세꼬시       1\n",
+       "흥정        1\n",
+       "밤묵        1\n",
+       "후크        1\n",
+       "갔드랬       1\n",
+       "Length: 18770, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "# 데이터 저장\r\n",
+    "okt_series.to_excel('okt_preprocessed_word_series_2015_cafe.xlsx',encoding='utf-8')"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
